<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="@dimen/card_view_side_margin"
        android:layout_marginTop="@dimen/card_view_top_bottom_margin"
        android:layout_marginRight="@dimen/card_view_side_margin"
        android:layout_marginBottom="@dimen/card_view_top_bottom_margin"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardElevation="@dimen/card_view_card_elevation"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/weatherImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/imageContentDescription"
                    android:padding="@dimen/weather_image_padding"
                    app:srcCompat="@drawable/fog"
                    tools:ignore="ImageContrastCheck" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weather"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom|start"
                        android:text="@string/weather"
                        android:textColor="@color/black"
                        android:textSize="@dimen/weather_bolded_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/weatherCondition"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="top|start"
                        android:text="@string/condition"
                        android:textColor="@color/black"
                        android:textSize="@dimen/weather_normal_text_size" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom|end"
                        android:text="@string/current_temperature"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temperature_bolded_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="top|end"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temperature_normal_text_size" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:contentDescription="@string/imageContentDescription"
                    android:padding="@dimen/temperature_image_padding"
                    app:srcCompat="@drawable/temperature"
                    tools:ignore="ImageContrastCheck" />


            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/imageContentDescription"
                        android:padding="@dimen/humidity_image_padding"
                        android:src="@drawable/hum"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/humidityDegree"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="bottom|start"
                            android:text="@string/humidity"
                            android:textColor="@color/black"
                            android:textSize="@dimen/bolded_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/humidityPerCent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="top|start"
                            tools:text="per cent"
                            android:textColor="@color/black"
                            android:textSize="@dimen/normal_text_size" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/imageContentDescription"
                        android:padding="@dimen/humidity_image_padding"
                        android:src="@drawable/wind"
                        tools:ignore="ImageContrastCheck" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="bottom|start"
                            android:text="@string/wind"
                            android:textColor="@color/black"
                            android:textSize="@dimen/bolded_text_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="top|start"
                            android:textColor="@color/black"
                            android:textSize="@dimen/normal_text_size" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/imageContentDescription"
                        android:padding="@dimen/humidity_image_padding"
                        app:srcCompat="@drawable/location" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:paddingEnd="@dimen/padding_end_country_name"
                            android:layout_weight="1"
                            android:gravity="center|bottom"
                            android:textSize="@dimen/bolded_text_size"
                            android:textStyle="bold"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/country"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|top"
                            android:text="@string/country"
                            android:paddingEnd="@dimen/padding_end_country_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/normal_text_size"
                            tools:ignore="RtlSymmetry" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/card_view_side_margin"
                    android:layout_marginEnd="@dimen/card_view_side_margin"
                    android:background="@color/black" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/card_view_side_margin"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:contentDescription="@string/imageContentDescription"
                            app:srcCompat="@drawable/sunrise"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/sunrise"
                            android:textColor="@color/black"
                            android:textSize="@dimen/normal_text_size" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/card_view_side_margin"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:contentDescription="@string/imageContentDescription"
                            app:srcCompat="@drawable/sunset" />

                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/sunset"
                            android:textColor="@color/black"
                            android:textSize="@dimen/normal_text_size" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>